scrollbar issue updated

--- a/src/packages/web/src/assets/css/constants/base/mixins.scss
+++ b/src/packages/web/src/assets/css/constants/base/mixins.scss
@@ -1,36 +1,17 @@
 @import "colors.scss";
 
 @mixin scrollbars() {
-
-  // For Google Chrome
   &::-webkit-scrollbar {
-    width: 3px;
-    height: 3px;
+    width: 8px;
+    height: 8px;
+    background-color: #ececec;
   }
 
   &::-webkit-scrollbar-thumb {
-    background-color: $GRAY_SHADE8;
+    background-color: $BLUE;
   }
-
-  &::-webkit-scrollbar-track {
-    box-shadow: "inset 0 0 6px rgba(0,0,0,0.00)";
-    background-color: transparent;
-  }
-
-  // For Internet Explorer
-  &::-webkit-scrollbar {
-    scrollbar-face-color: $GRAY_SHADE8;
-    scrollbar-track-color: $GRAY_SHADE8;
-  }
-
-  &::-webkit-scrollbar-thumb {
-    scrollbar-face-color: $GRAY_SHADE8;
-    scrollbar-track-color: $GRAY_SHADE8;
-  }
-
-  &::-webkit-scrollbar-track {
-    scrollbar-face-color: $GRAY_SHADE8;
-    scrollbar-track-color: $GRAY_SHADE8;
+  &::-webkit-scrollbar-thumb:hover {
+    background: $BLUE;
   }
 }
 
@@ -39,38 +20,27 @@
     @media (min-width: 599px) {
       @content;
     }
-  }
-
-  @else if $size ==tablet-portrait-medium-up {
+  } @else if $size ==tablet-portrait-medium-up {
     @media (min-width: 960px) {
       @content;
     }
-  }
-
-  @else if $size ==tablet-portrait-large-up {
+  } @else if $size ==tablet-portrait-large-up {
     @media (max-width: 768px) {
       @content;
     }
-  }
-  @else if $size ==tablet-portrait-tablet-up {
+  } @else if $size ==tablet-portrait-tablet-up {
     @media (max-width: 1024px) {
       @content;
     }
-  }
-
-  @else if $size ==tablet-landscape-up {
+  } @else if $size ==tablet-landscape-up {
     @media (max-width: 959px) {
       @content;
     }
-  }
-
-  @else if $size ==desktop-up {
+  } @else if $size ==desktop-up {
     @media (min-width: 1200px) {
       @content;
     }
-  }
-
-  @else if $size ==big-desktop-up {
+  } @else if $size ==big-desktop-up {
     @media (min-width: 1800px) {
       @content;
     }
