--- a/src/packages/web/src/assets/css/content/incident.styles.scss
+++ b/src/packages/web/src/assets/css/content/incident.styles.scss
@@ -36,6 +36,7 @@
   .content-block-wrapper {
     padding: 0 25px;
     &.common-incident-block {
+      @include scrollbars();
       @include mq(tablet-portrait-medium-up) {
         width: 450px;
         overflow-y: scroll;
@@ -92,34 +93,5 @@
   }
   & .customButton {
     margin-bottom: 20px;
-  }
-  
-  &::-webkit-scrollbar,
-  .common-incident-block::-webkit-scrollbar {
-    width: 8px;
-    border-radius: 100%;
-    cursor: pointer;
-    scroll-margin: 10px;
-  }
-  /* Track */
-  &::-webkit-scrollbar-track,
-  .common-incident-block::-webkit-scrollbar-track {
-    background: #f1f1f1;
-    scroll-margin: 10px;
-    cursor: pointer;
-  } 
-  /* Handle */
-  &::-webkit-scrollbar-thumb,
-  .common-incident-block::-webkit-scrollbar-thumb {
-    background: #ececec;
-    scroll-margin: 10px;
-    cursor: pointer;
-  }
-  /* Handle on hover */
-  &::-webkit-scrollbar-thumb:hover,
-  .common-incident-block::-webkit-scrollbar-thumb:hover {
-    background: $BLUE;
-    scroll-margin: 10px;
-    cursor: pointer;
   }
 }
